# farawaytech-py-core

./: README.md  pyproject.toml
ftechcore/util/: logging.py
